# email-threads

./: .gitignore  README.md  pyproject.toml
docs/: reply_chain_design.md
src/email_monitor_test/: __init__.py
src/email_threads/: __init__.py  account.py  message.py  monitor.py  reply_chain.py  sender.py  storage.py
